fix logo issue on IE9 again

--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -201,9 +201,12 @@ input, textarea {
   }
 
   .logo {
-    height: 100%;
+    height: 90px;
     width: 200px;
     background: transparent url(../images/logo.png) left center/120px auto no-repeat;
+    @include bp-small {
+      height: 60px;
+    }
   }
 
   .nav-bar {
