--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -198,9 +198,12 @@ input, textarea {
     .header {
       height: 60px; } }
   .header .logo {
-    height: 100%;
+    height: 90px;
     width: 200px;
     background: transparent url(../images/logo.png) left center/120px auto no-repeat; }
+    @media only screen and (max-width: 768px) {
+      .header .logo {
+        height: 60px; } }
   .header .nav-bar {
     list-style: none;
     margin: 0;
